[package]
name = "wpng"
version = "0.1.0"
authors = ["José Luis C.D. <jlcd0003@red.ujaen.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.1"
crc32fast = "1.2.0"
flate2 = "1.0.13"
num-traits = "0.2.11"
num-derive = "0.3.0"
structopt = "0.3.11"